# smol-portal

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  SPEC.md  memory.md  reference-material.md
.cursor/rules/: code-checks.mdc  daily-startup.mdc  smolvm-interop.mdc
examples/smolvm/: Dockerfile.portal-cuda  Dockerfile.portallib-cuda  README.md  capability_probe.py  fidelity_check.sh  lambda-instructions.md  port_e2e.py  portal.smolfile  portallib.smolfile  smoke_portallib.py  smoke_refit_portallib.py  smoke_train_portallib.py
pipeline/portal/: pyproject.toml
pipeline/portal/portal/: __init__.py  artifacts.py  baseline.py  cli.py  config.py  converter.py  cuda.py  data.py  env.py  eval.py  hypernetwork.py  port.py  train.py
pipeline/portal/tests/: test_artifacts.py  test_converter.py  test_cuda.py  test_data.py  test_env.py  test_latent_mode.py  test_port_config.py
