[project]
name = "portal"
version = "0.1.0"
description = "PorTAL: Portable Task Adapters — learn a task once, port to any base model"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    # torch: use the base image's build on smolvm (conda/pytorch). pip-upgrading
    # torch/torchvision on that image breaks transformers (torchvision::nms).
    "transformers>=4.45,<4.52",
    "peft>=0.14,<0.18",
    "safetensors>=0.4",
    "datasets>=3.0,<4",
    "accelerate>=1.0,<2",
    "pydantic>=2.0",
]

[project.scripts]
portal = "portal.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
ml = [
    "torch>=2.4",
    "transformers>=4.45,<4.52",
    "peft>=0.14,<0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
